feat: implement water mark buffer
